<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.android.java.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" >
        <action
            android:id="@+id/action_navigation_home_to_navigation_action"
            app:destination="@id/navigation_action"
            app:popUpToInclusive="false" />
    </fragment>

    <fragment
        android:id="@+id/navigation_action"
        android:name="com.android.java.ui.action.ActionFragment"
        android:label="@string/title_action"
        tools:layout="@layout/fragment_action" >
        <action
            android:id="@+id/action_navigation_action_to_navigation_action_part"
            app:destination="@id/navigation_action_part"
            app:popUpToInclusive="true" />
    </fragment>

    <fragment
        android:id="@+id/navigation_calendare"
        android:name="com.android.java.ui.notifications.NotificationsFragment"
        android:label="@string/title_calendere"
        tools:layout="@layout/fragment_calendare" />
    <fragment
        android:id="@+id/navigation_action_part"
        android:name="com.android.java.ui.action.ActionPartFragment"
        android:label="@string/title_calendere"
        tools:layout="@layout/fragment_action_part" >
        <action
            android:id="@+id/action_navigation_action_part_self"
            app:destination="@id/navigation_action_part" />
        <action
            android:id="@+id/action_navigation_action_part_to_navigation_home"
            app:destination="@id/navigation_home" />
        <action
            android:id="@+id/action_navigation_action_part_to_navigation_action"
            app:destination="@id/navigation_action" />
    </fragment>
</navigation>