<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.home.HomeFragment">

    <ScrollView
        android:layout_width="0dp"
        android:layout_height="0dp"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="30dp"
            android:orientation="vertical"

            >

            <TextView
                android:id="@+id/text_home"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/lato_black"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="16sp"
                android:visibility="gone"
                tools:visibility="gone" />

            <TextView
                android:id="@+id/Description"
                android:layout_width="match_parent"
                android:layout_height="250dp"
                android:layout_marginTop="51dp"
                android:background="@drawable/ic_background"
                android:fontFamily="@font/lato_black"
                android:padding="20dp"
                android:text="@string/title_descreption"
                android:textColor="@color/black"
                android:textSize="16sp" />

            <Button
                android:id="@+id/Start"
                android:layout_width="259dp"
                android:layout_height="54dp"
                android:layout_gravity="center"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="120dp"
                android:fontFamily="@font/lato_black"

                android:text="@string/title_start"
                android:textColor="@color/black"
                android:textSize="16sp"
                app:cornerRadius="20dp" />


            <TextView
                android:id="@+id/MainMenuBlock"
                android:layout_width="match_parent"
                android:layout_height="259dp"
                android:layout_marginBottom="76dp"
                android:background="@drawable/ic_background"

                android:fontFamily="@font/lato_black"
                android:gravity="center"
                android:text="@string/title_mainmenublock"
                android:textColor="@color/black" />

        </LinearLayout>
    </ScrollView>


</androidx.constraintlayout.widget.ConstraintLayout>

